# rfml-amc-spectrum-sensing

./: .gitignore  README.md  pyproject.toml  requirements.txt
.codex/: hooks.json
.codex/hooks/: hook_lib.py  permission_request_policy.py  post_tool_use_review.py  (+5 more)
configs/: cnn1d.yaml  cnn1d_round1.yaml  multitask.yaml  multitask_round1.yaml  multitask_round2_resnet_lambda0p05_pos0p85.yaml  multitask_round2_resnet_lambda0p1_pos0p8.yaml  multitask_round2_resnet_lambda0p2_pos0p75.yaml  resnet1d.yaml  resnet1d_round1.yaml  sensing_cnn.yaml  sensing_cnn_round1.yaml  stft_cnn.yaml  stft_cnn_round1.yaml  stft_cnn_round2_nfft128_hop16_deep.yaml  stft_cnn_round2_nfft256_hop16_deep.yaml  stft_cnn_round2_nfft256_hop32_deep.yaml  stft_cnn_round3_nfft128_hop16_deeper.yaml  stft_cnn_round4_nfft128_hop16_deeper_logpower_phase.yaml  stft_cnn_round5_nfft128_hop16_deeper_logpower_realimag.yaml  stft_cnn_round6_nfft128_hop16_deeper_logpower_phase_lowsnr_weighted.yaml  stft_cnn_round7_resnetplus_logpower_phase_lowsnr_oversample.yaml  stft_cnn_round8_deeper_wide_logpower_phase_lowsnr_mix.yaml  stft_cnn_round9_deeper_wide_logpower_realimag_lowsnr_mix.yaml
notebooks/: 00_dataset_preview.ipynb
reports/: experiment_report.md
scripts/: _bootstrap.py  check_env.py  compare_results.py  evaluate.py  inspect_dataset.py  make_splits.py  monitor.py  plot_spectrograms.py  run_sensing.py  smoke_test.py  train.py
tests/: test_baselines.py  test_dataset.py  test_eval_api.py  test_multitask.py  test_resnet1d.py  test_spectrum_sensing.py  test_splits.py  test_stft.py  test_training.py
(+28 files in other folders)
